repair horizontal scrollbar

--- a/docs/css/mainstyle.css
+++ b/docs/css/mainstyle.css
@@ -15,6 +15,7 @@ body{
     position: relative;
     padding: 0;
     margin: 0;
+    overflow-x:hidden
 }
 
 /*ANIMATION - HEADER*/
@@ -99,8 +100,6 @@ nav li.current{
         width: 80%;
 
     }
-
-
     nav li{
         width: 100%;
     }
